src/reporting/snapshots/feotest__reporting__console__tests__fail_verdict.snap
---
source: src/reporting/console.rs
expression: output
---
═ VERDICT: FAIL (80 of 100 < cutoff 91 (regression/fisher)) ═
Test:                my-service

Methodology:         1.5.0
Pass rate:           0.8000 (80/100 samples)
Rule:                regression/fisher (cutoff 91)
Threshold:           0.9100
Confidence:          0.9500
Wilson lower:        0.7267 (descriptive)
Spec:                my-service.yaml
Origin:              EMPIRICAL
Elapsed:             0.5s
