src/reporting/snapshots/feotest__reporting__console__tests__inconclusive_covariate_misalignment.snap
---
source: src/reporting/console.rs
expression: output
---
═ VERDICT: INCONCLUSIVE (covariate misalignment) ═
Test:                covariate-test

Methodology:         1.6.0
Pass rate:           0.8500 (85/100 samples)

Covariate misalignment:
  Baseline:          model=gpt-4o, region=us-east-1
  Observed:          model=gpt-4o-mini, region=us-east-1
  Differs:           model (baseline: gpt-4o, observed: gpt-4o-mini)
Elapsed:             0.5s
