src/reporting/snapshots/feotest__reporting__console__tests__inconclusive_verdict.snap
---
source: src/reporting/console.rs
expression: output
---
═ VERDICT: INCONCLUSIVE (insufficient evidence) ═
Test:                flaky-service

Methodology:         1.6.0
Pass rate:           0.7000 (7/10 samples)
Elapsed:             0.5s
