src/reporting/snapshots/feotest__reporting__console__tests__verdict_with_warnings.snap
---
source: src/reporting/console.rs
expression: output
---
═ VERDICT: PASS (10 of 10 observed) ═
Test:                warned-service

Methodology:         1.6.0
Pass rate:           1.0000 (10/10 samples)
Elapsed:             0.5s

Warning:             [UNDERSIZED] Sample size 10 is insufficient for verification-grade evidence
Warning:             [SMOKE_NORMATIVE] Smoke test against normative threshold — verdict is not evidential
